# Hermes-data-agent

./: .coverage  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  INTERFACE_DESIGN.md  PRODUCT_SPEC.md  PROJECT_STATUS.md  README.md  REPO_ANALYSIS.md  REQUIREMENTS_REFLECTION.md  TASK_STATUS.md  TESTING.md  pyproject.toml  sprint-status.yaml
configs/: batch_config.jsonl  default.yaml  orbit_vehicle_tree_sample.yaml  vlm_task_sample.yaml
core/: __init__.py  cascade_orchestrator.py  client_factory.py  config_loader.py  consistency_verifier.py  contracts.py  generalization_engine.py  image_client.py  image_synthesis_coordinator.py  llm_client.py  provenance_tracker.py  rule_verifier.py  safety_verifier.py  schema_verifier.py  seed_engine.py  semantic_verifier.py  vision_consistency_verifier.py  visual_generalization_engine.py  visual_seed_engine.py  vlm_client.py  vlm_pipeline_runner.py
data/: 数据处理测试.xlsx
data/pre_router/: capability_corpus.jsonl  capability_rerank_test.jsonl  capability_rerank_train.jsonl  capability_triplet_test.jsonl  capability_triplet_train.jsonl  pre_router_test.jsonl  pre_router_train.jsonl
diagrams/: architecture.mmd
docs/: hermes-agent-gap-analysis.md  orbit-integration-analysis.md
output/pre_router/: capability_triplet_synthetic.jsonl  capability_triplet_train_augmented.jsonl  pre_router_synthetic.jsonl  pre_router_train_augmented.jsonl
scripts/: batch_synthesize.py  cli.py  dataset_adapter.py  evolve_cockpit_skill.py  orbit_dataset_adapter.py  synthesize_pre_router.py  vlm_dataset_adapter.py
skills/car-orbit-synthesis/: SKILL.md
skills/cockpit-delegation-orchestrator/: SKILL.md
skills/cockpit-utterance-synthesis/: SKILL.md
skills/cockpit-utterance-validation/: SKILL.md
skills/pre-router-synthesis/: SKILL.md
tests/: test_orbit_core.py  test_orbit_llm_mock.py  test_tools.py  test_vlm_core.py  test_vlm_coverage_boost.py  test_vlm_llm_mock.py
tools/: cockpit_synthesis_tool.py  delegate_synthesis.py  orbit_generalize_tool.py  orbit_seed_tool.py  orbit_toolset_adapter.py  orbit_verify_tool.py  pre_router_synthesis_tool.py  toolset_adapter.py
